--- a/style.css
+++ b/style.css
@@ -75,3 +75,39 @@ p {
     border: none;
     border-radius: 5px;
 }
+
+.random {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+    margin: 40px auto 100px auto;
+}
+
+.random p {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.random .images {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.images .image {
+    flex-basis: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    text-align: center;
+    color: rgb(138, 138, 149);
+}
+
+.images .image div{
+    height: 150px;
+    width: 150px;
+    border: 4px solid #3882F6;
+    border-radius: 10px;
+}
