--- a/style.css
+++ b/style.css
@@ -111,3 +111,24 @@ p {
     border: 4px solid #3882F6;
     border-radius: 10px;
 }
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    color: #1F2937;
+    padding: 100px 310px;
+}
+
+.quote .text {
+    font-size: 36px;
+    font-style: italic;
+}
+
+.quote .person {
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: auto;
+}
