--- a/style.css
+++ b/style.css
@@ -164,3 +164,15 @@ p {
     padding: 5px 25px;
     align-self: flex-end;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    background-color: #1F2937;
+    text-align: center;
+    color: #F9FAF8;
+    height: 100px;
+    font-size: 18px;
+}
